@@ -77,6 +77,7 @@ solution "Tutorials"
 	include "01_camera_setup"
 	include "02_mesh"
 	include "03_instance"
+	include "04_deformation_motion_blur"
 	include "10_light_point"
 	include "11_light_mesh"
 	include "12_light_environment"
